--- a/overlays/prod/rucio/rucio-env-patch.yaml
+++ b/overlays/prod/rucio/rucio-env-patch.yaml
@@ -2,6 +2,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  name: usdf-automatix
+spec:
+  template:
+    spec:
+      containers:
+      - name: rucio-daemons
+        env:
+        - name: RUCIO_CFG_DATABASE_DEFAULT
+          valueFrom:
+            secretKeyRef:
+              name: usdf-db-conn-str
+              key: db-conn-str.txt
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
   name: usdf-undertaker
 spec:
   template:
@@ -40,22 +56,6 @@ spec:
     spec:
       containers:
       - name: rucio-ui
-        env:
-        - name: RUCIO_CFG_DATABASE_DEFAULT
-          valueFrom:
-            secretKeyRef:
-              name: usdf-db-conn-str
-              key: db-conn-str.txt
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: usdf-rucio-server-auth
-spec:
-  template:
-    spec:
-      containers:
-      - name: rucio-server-auth
         env:
         - name: RUCIO_CFG_DATABASE_DEFAULT
           valueFrom:
