--- a/overlays/elastic/elasticsearch/helm-elasticsearch.yaml
+++ b/overlays/elastic/elasticsearch/helm-elasticsearch.yaml
@@ -1,4 +1,3 @@
----
 # Source: eck-elasticsearch/templates/elasticsearch.yaml
 apiVersion: elasticsearch.k8s.elastic.co/v1
 kind: Elasticsearch
@@ -12,38 +11,51 @@ metadata:
   annotations:
     eck.k8s.elastic.co/license: basic
 spec:
+  updateStrategy:
+    changeBudget:
+      maxSurge: 3
+      maxUnavailable: 1
+  http:
+    tls:
+      selfSignedCertificate:
+        disabled: true
   version: 8.11.0
+  volumeClaimDeletePolicy: DeleteOnScaledownOnly
   nodeSets:
-    
-    - config:
-        node.roles:
-        - master
-        node.store.allow_mmap: false
-      count: 3
-      name: master
-      podTemplate:
-        spec:
-          containers:
-          - name: elasticsearch
-            resources:
-              limits:
-                memory: 2Gi
-              requests:
-                memory: 2Gi
-    - config:
-        node.roles:
-        - data
-        - ingest
-        - transform
-        node.store.allow_mmap: false
-      count: 3
-      name: worker
-      podTemplate:
-        spec:
-          containers:
-          - name: elasticsearch
-            resources:
-              limits:
-                memory: 2Gi
-              requests:
-                memory: 2Gi
+
+  - config:
+      node.roles:
+      - master
+      node.store.allow_mmap: false
+    count: 3
+    name: master
+    podTemplate:
+      spec:
+        containers:
+        - name: elasticsearch
+          resources:
+            limits:
+              cpu: 2
+              memory: 5Gi
+            requests:
+              cpu: 1
+              memory: 3Gi
+  - config:
+      node.roles:
+      - data
+      - ingest
+      - transform
+      node.store.allow_mmap: false
+    count: 3
+    name: worker
+    podTemplate:
+      spec:
+        containers:
+        - name: elasticsearch
+          resources:
+            limits:
+              cpu: 3
+              memory: 9Gi
+            requests:
+              cpu: 1
+              memory: 5Gi
